dev/ declaring player

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
 	<head>
-		<title>Phaser3 + Parceljs Template</title>
+		<title>Phaser Ts test</title>
 	</head>
 	<body>
 		<script src="main.ts"></script>
